Fix shifting rascals size

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -11,7 +11,7 @@
 }
 
 .hero-logo {
-    width: 60%;
+    width: 58%;
 }
 
 /*Large devices (desktops, 992px and up)*/
